Add method metrics table creation

--- a/notebooks/technique_comparison.ipynb
+++ b/notebooks/technique_comparison.ipynb
@@ -49,6 +49,7 @@
     "from scripts.compare_techniques import (\n",
     "    fetch_all_runs,\n",
     "    create_comparison_table,\n",
+    "    create_method_metrics_table,\n",
     "    print_comparison_summary,\n",
     "    plot_grouped_bar_chart,\n",
     "    plot_radar_chart,\n",
@@ -151,11 +152,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## 4. Summary Statistics"
+    "# Iris only:\n",
+    "\n",
+    "iris_df = comparison_df[comparison_df['dataset'] == 'iris']\n",
+    "iris_df\n",
+    "\n"
    ]
   },
   {
@@ -165,13 +172,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create method-metrics table for a specific dataset (methods as rows, metrics as columns)\n",
+    "# This provides a cleaner view for comparing techniques on a single dataset\n",
+    "create_method_metrics_table(raw_df, dataset='iris')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create method-metrics table aggregated across ALL datasets\n",
+    "# This shows the average performance of each technique across all datasets\n",
+    "create_method_metrics_table(raw_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12",
+   "metadata": {},
+   "source": [
+    "## 4. Summary Statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Print detailed comparison summary\n",
     "print_comparison_summary(comparison_df)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "14",
    "metadata": {},
    "source": [
     "## 5. Winner Heatmap\n",
@@ -182,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "16",
    "metadata": {},
    "source": [
     "## 6. Metric-by-Metric Bar Charts"
@@ -202,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "18",
    "metadata": {},
    "source": [
     "## 7. Dataset-Specific Radar Charts\n",
@@ -227,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "21",
    "metadata": {},
    "source": [
     "## 8. Interactive Plotly Visualizations (if available)"
@@ -316,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "23",
    "metadata": {},
    "source": [
     "## 9. Cross-Dataset Summary\n",
@@ -374,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "25",
    "metadata": {},
    "source": [
     "## 10. Export Results"
@@ -437,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
