Fix WandB project name case

--- a/notebooks/technique_comparison.ipynb
+++ b/notebooks/technique_comparison.ipynb
@@ -45,6 +45,11 @@
     "    PLOTLY_AVAILABLE = False\n",
     "    print(\"Plotly not available. Install with: pip install plotly\")\n",
     "\n",
+    "# Force reload of our comparison module (in case it changed)\n",
+    "import importlib\n",
+    "import scripts.compare_techniques\n",
+    "importlib.reload(scripts.compare_techniques)\n",
+    "\n",
     "# Import our comparison module\n",
     "from scripts.compare_techniques import (\n",
     "    fetch_all_runs,\n",
@@ -81,7 +86,7 @@
    "source": [
     "# WandB Configuration\n",
     "WANDB_ENTITY = 'mllab-ts-universit-di-trieste'  # Your WandB team/username\n",
-    "WANDB_PROJECT = 'counterfactual-dpg'  # Your WandB project name\n",
+    "WANDB_PROJECT = 'CounterFactualDPG'  # Case-sensitive project name\n",
     "\n",
     "# Optional: filter specific datasets (set to None for all)\n",
     "SELECTED_DATASETS = None  # e.g., ['iris', 'german_credit', 'heart_disease_uci']\n",
