Add caching for WandB data

--- a/notebooks/technique_comparison.ipynb
+++ b/notebooks/technique_comparison.ipynb
@@ -91,9 +91,14 @@
     "# Optional: filter specific datasets (set to None for all)\n",
     "SELECTED_DATASETS = None  # e.g., ['iris', 'german_credit', 'heart_disease_uci']\n",
     "\n",
+    "# Toggle: Set to True to load cached data from disk, False to fetch fresh from WandB\n",
+    "LOAD_FROM_CACHE = True\n",
+    "CACHE_FILE = 'temp/raw_df_cache.pkl'\n",
+    "\n",
     "print(f\"Entity: {WANDB_ENTITY}\")\n",
     "print(f\"Project: {WANDB_PROJECT}\")\n",
-    "print(f\"Datasets filter: {SELECTED_DATASETS or 'All'}\")"
+    "print(f\"Datasets filter: {SELECTED_DATASETS or 'All'}\")\n",
+    "print(f\"Load from cache: {LOAD_FROM_CACHE}\")"
    ]
   },
   {
@@ -111,14 +116,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fetch all runs from WandB\n",
-    "raw_df = fetch_all_runs(\n",
-    "    project=WANDB_PROJECT,\n",
-    "    entity=WANDB_ENTITY,\n",
-    "    datasets=SELECTED_DATASETS,\n",
-    ")\n",
+    "import os\n",
+    "import pickle\n",
     "\n",
-    "print(f\"\\nFetched {len(raw_df)} runs\")\n",
+    "# Load from cache or fetch from WandB\n",
+    "if LOAD_FROM_CACHE and os.path.exists(CACHE_FILE):\n",
+    "    print(f\"Loading cached data from {CACHE_FILE}...\")\n",
+    "    with open(CACHE_FILE, 'rb') as f:\n",
+    "        raw_df = pickle.load(f)\n",
+    "    print(f\"Loaded {len(raw_df)} runs from cache\")\n",
+    "else:\n",
+    "    print(\"Fetching data from WandB...\")\n",
+    "    raw_df = fetch_all_runs(\n",
+    "        project=WANDB_PROJECT,\n",
+    "        entity=WANDB_ENTITY,\n",
+    "        datasets=SELECTED_DATASETS,\n",
+    "        limit=500\n",
+    "    )\n",
+    "    \n",
+    "    # Save to cache\n",
+    "    os.makedirs(os.path.dirname(CACHE_FILE), exist_ok=True)\n",
+    "    with open(CACHE_FILE, 'wb') as f:\n",
+    "        pickle.dump(raw_df, f)\n",
+    "    print(f\"Saved {len(raw_df)} runs to {CACHE_FILE}\")\n",
+    "\n",
+    "print(f\"\\nTotal runs: {len(raw_df)}\")\n",
     "print(f\"Datasets: {sorted(raw_df['dataset'].unique())}\")\n",
     "print(f\"Techniques: {raw_df['technique'].unique().tolist()}\")"
    ]
@@ -127,6 +149,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "source": [
     "## 3. Create Comparison Table"
@@ -147,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,19 +203,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create method-metrics table for a specific dataset (methods as rows, metrics as columns)\n",
     "# This provides a cleaner view for comparing techniques on a single dataset\n",
-    "create_method_metrics_table(raw_df, dataset='iris')"
+    "create_method_metrics_table(raw_df, dataset='iris')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate method-metrics tables for ALL datasets\n",
+    "all_datasets = sorted(raw_df['dataset'].unique())\n",
+    "print(f\"Generating tables for {len(all_datasets)} datasets:\\n\")\n",
+    "\n",
+    "for dataset in all_datasets:\n",
+    "    print(f\"\\n{'='*60}\")\n",
+    "    print(f\"Dataset: {dataset.upper()}\")\n",
+    "    print(f\"{'='*60}\")\n",
+    "    display(create_method_metrics_table(raw_df, dataset=dataset))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "14",
    "metadata": {},
    "source": [
     "## 4. Summary Statistics"
@@ -205,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "16",
    "metadata": {},
    "source": [
     "## 5. Winner Heatmap\n",
@@ -226,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "18",
    "metadata": {},
    "source": [
     "## 6. Metric-by-Metric Bar Charts"
@@ -246,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "20",
    "metadata": {},
    "source": [
     "## 7. Dataset-Specific Radar Charts\n",
@@ -271,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "23",
    "metadata": {},
    "source": [
     "## 8. Interactive Plotly Visualizations (if available)"
@@ -360,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "25",
    "metadata": {},
    "source": [
     "## 9. Cross-Dataset Summary\n",
@@ -418,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "27",
    "metadata": {},
    "source": [
     "## 10. Export Results"
@@ -481,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
