Enable latest run filtering

--- a/notebooks/technique_comparison.ipynb
+++ b/notebooks/technique_comparison.ipynb
@@ -62,6 +62,7 @@
     "    COMPARISON_METRICS,\n",
     "    TECHNIQUE_COLORS,\n",
     "    determine_winner,\n",
+    "    filter_to_latest_run_per_combo,\n",
     ")\n",
     "\n",
     "print(\"Imports loaded successfully!\")"
@@ -92,7 +93,7 @@
     "SELECTED_DATASETS = None  # e.g., ['iris', 'german_credit', 'heart_disease_uci']\n",
     "\n",
     "# Toggle: Set to True to load cached data from disk, False to fetch fresh from WandB\n",
-    "LOAD_FROM_CACHE = False\n",
+    "LOAD_FROM_CACHE = True\n",
     "CACHE_FILE = 'temp/raw_df_cache.pkl'\n",
     "\n",
     "# Toggle: Set to True to apply excluded datasets from config.yaml, False to include all datasets\n",
@@ -165,6 +166,9 @@
     "    filtered_count = original_count - len(raw_df)\n",
     "    if filtered_count > 0:\n",
     "        print(f\"\\nExcluded {filtered_count} run(s) from dataset(s): {sorted(set(excluded_datasets) & set(original_datasets))}\")\n",
+    "\n",
+    "# Filter to keep only the most recent run per dataset X technique combo\n",
+    "raw_df = filter_to_latest_run_per_combo(raw_df)\n",
     "\n",
     "print(f\"\\nTotal runs: {len(raw_df)}\")\n",
     "print(f\"Datasets: {sorted(raw_df['dataset'].unique())}\")\n",
