Set cache loading to false

--- a/notebooks/technique_comparison.ipynb
+++ b/notebooks/technique_comparison.ipynb
@@ -93,7 +93,7 @@
     "SELECTED_DATASETS = None  # e.g., ['iris', 'german_credit', 'heart_disease_uci']\n",
     "\n",
     "# Toggle: Set to True to load cached data from disk, False to fetch fresh from WandB\n",
-    "LOAD_FROM_CACHE = True\n",
+    "LOAD_FROM_CACHE = False\n",
     "CACHE_FILE = 'temp/raw_df_cache.pkl'\n",
     "\n",
     "# Toggle: Set to True to apply excluded datasets from config.yaml, False to include all datasets\n",
