Add min_created_at filter

--- a/notebooks/technique_comparison.ipynb
+++ b/notebooks/technique_comparison.ipynb
@@ -96,6 +96,10 @@
     "LOAD_FROM_CACHE = False\n",
     "CACHE_FILE = 'temp/raw_df_cache.pkl'\n",
     "\n",
+    "# Optional: Only fetch runs created after this timestamp (set to None for no filter)\n",
+    "# Format: ISO 8601 string, e.g., \"2026-01-20T22:00:00\"\n",
+    "MIN_CREATED_AT = \"2026-01-20T22:00:00\"  # Yesterday at 22:00\n",
+    "\n",
     "# Toggle: Set to True to apply excluded datasets from config.yaml, False to include all datasets\n",
     "APPLY_EXCLUDED_DATASETS = True\n",
     "\n",
@@ -103,6 +107,7 @@
     "print(f\"Project: {WANDB_PROJECT}\")\n",
     "print(f\"Datasets filter: {SELECTED_DATASETS or 'All'}\")\n",
     "print(f\"Load from cache: {LOAD_FROM_CACHE}\")\n",
+    "print(f\"Min created at: {MIN_CREATED_AT}\")\n",
     "print(f\"Apply excluded datasets: {APPLY_EXCLUDED_DATASETS}\")"
    ]
   },
@@ -137,42 +142,9 @@
     "        project=WANDB_PROJECT,\n",
     "        entity=WANDB_ENTITY,\n",
     "        datasets=SELECTED_DATASETS,\n",
-    "        limit=500\n",
-    "    )\n",
-    "    \n",
-    "    # Save to cache\n",
-    "    os.makedirs(os.path.dirname(CACHE_FILE), exist_ok=True)\n",
-    "    with open(CACHE_FILE, 'wb') as f:\n",
-    "        pickle.dump(raw_df, f)\n",
-    "    print(f\"Saved {len(raw_df)} runs to {CACHE_FILE}\")\n",
-    "\n",
-    "# Load excluded datasets from config.yaml if APPLY_EXCLUDED_DATASETS is True\n",
-    "excluded_datasets = []\n",
-    "if APPLY_EXCLUDED_DATASETS:\n",
-    "    config_file = '../configs/config.yaml'\n",
-    "    if os.path.exists(config_file):\n",
-    "        try:\n",
-    "            with open(config_file, 'r') as f:\n",
-    "                config = yaml.safe_load(f)\n",
-    "                excluded_datasets = config.get('excluded_datasets', [])\n",
-    "        except Exception as e:\n",
-    "            print(f\"Warning: Could not load excluded datasets from config: {e}\")\n",
-    "\n",
-    "# Filter out excluded datasets if flag is enabled and there are any\n",
-    "if APPLY_EXCLUDED_DATASETS and excluded_datasets:\n",
-    "    original_count = len(raw_df)\n",
-    "    original_datasets = sorted(raw_df['dataset'].unique())\n",
-    "    raw_df = raw_df[~raw_df['dataset'].isin(excluded_datasets)].copy()\n",
-    "    filtered_count = original_count - len(raw_df)\n",
-    "    if filtered_count > 0:\n",
-    "        print(f\"\\nExcluded {filtered_count} run(s) from dataset(s): {sorted(set(excluded_datasets) & set(original_datasets))}\")\n",
-    "\n",
-    "# Filter to keep only the most recent run per dataset X technique combo\n",
-    "raw_df = filter_to_latest_run_per_combo(raw_df)\n",
-    "\n",
-    "print(f\"\\nTotal runs: {len(raw_df)}\")\n",
-    "print(f\"Datasets: {sorted(raw_df['dataset'].unique())}\")\n",
-    "print(f\"Techniques: {raw_df['technique'].unique().tolist()}\")"
+    "        limit=500,\n",
+    "        min_created_at=MIN_CREATED_AT\n",
+    "    )\n"
    ]
   },
   {
