Add image comparison feature

--- a/notebooks/run_comparison.ipynb
+++ b/notebooks/run_comparison.ipynb
@@ -589,6 +589,144 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Display Images from Runs Side by Side\n",
+    "\n",
+    "import requests\n",
+    "from PIL import Image\n",
+    "from io import BytesIO\n",
+    "import base64\n",
+    "from urllib.parse import urlparse\n",
+    "\n",
+    "def display_image_side_by_side(run1_image, run2_image, image_name):\n",
+    "    \"\"\"Display two images side by side.\"\"\"\n",
+    "    \n",
+    "    def image_to_html(img, title):\n",
+    "        \"\"\"Convert PIL image to HTML.\"\"\"\n",
+    "        buffered = BytesIO()\n",
+    "        img.save(buffered, format=\"PNG\")\n",
+    "        img_str = base64.b64encode(buffered.getvalue()).decode()\n",
+    "        return f\"\"\"\n",
+    "        <div style=\"text-align: center; flex: 1; min-width: 300px; padding: 10px;\">\n",
+    "            <h4 style=\"color: {'#2e86de' if 'Run 1' in title else '#10ac84'}; margin-bottom: 10px;\">{title}</h4>\n",
+    "            <img src=\"data:image/png;base64,{img_str}\" style=\"max-width: 100%; height: auto; border: 2px solid #ddd; border-radius: 5px;\">\n",
+    "        </div>\n",
+    "        \"\"\"\n",
+    "    \n",
+    "    if run1_image and run2_image:\n",
+    "        html = f\"\"\"\n",
+    "        <div style=\"display: flex; gap: 20px; flex-wrap: wrap; margin-bottom: 30px;\">\n",
+    "            <div style=\"width: 100%; text-align: center; padding: 10px; background: #f8f9fa; border-radius: 5px; margin-bottom: 10px;\">\n",
+    "                <h3 style=\"margin: 0;\">🖼️ {image_name}</h3>\n",
+    "            </div>\n",
+    "            {image_to_html(run1_image, 'Run 1 (poxmea6n)')}\n",
+    "            {image_to_html(run2_image, 'Run 2 (buqt4b6u)')}\n",
+    "        </div>\n",
+    "        \"\"\"\n",
+    "        display(HTML(html))\n",
+    "    elif run1_image:\n",
+    "        html = f\"\"\"\n",
+    "        <div style=\"text-align: center; padding: 15px; background: #fff3cd; border-radius: 5px; margin-bottom: 30px;\">\n",
+    "            <h3 style=\"color: #856404; margin: 0;\">🖼️ {image_name} - Only in Run 1</h3>\n",
+    "        </div>\n",
+    "        <div style=\"display: flex; justify-content: center;\">\n",
+    "            {image_to_html(run1_image, 'Run 1 (poxmea6n)')}\n",
+    "        </div>\n",
+    "        \"\"\"\n",
+    "        display(HTML(html))\n",
+    "    elif run2_image:\n",
+    "        html = f\"\"\"\n",
+    "        <div style=\"text-align: center; padding: 15px; background: #fff3cd; border-radius: 5px; margin-bottom: 30px;\">\n",
+    "            <h3 style=\"color: #856404; margin: 0;\">🖼️ {image_name} - Only in Run 2</h3>\n",
+    "        </div>\n",
+    "        <div style=\"display: flex; justify-content: center;\">\n",
+    "            {image_to_html(run2_image, 'Run 2 (buqt4b6u)')}\n",
+    "        </div>\n",
+    "        \"\"\"\n",
+    "        display(HTML(html))\n",
+    "    else:\n",
+    "        print(f\"⚠️  No image found for: {image_name}\")\n",
+    "\n",
+    "def download_image(url):\n",
+    "    \"\"\"Download image from URL and return PIL Image.\"\"\"\n",
+    "    try:\n",
+    "        response = requests.get(url, timeout=30)\n",
+    "        if response.status_code == 200:\n",
+    "            return Image.open(BytesIO(response.content))\n",
+    "    except Exception as e:\n",
+    "        print(f\"  Error downloading image from {url}: {e}\")\n",
+    "    return None\n",
+    "\n",
+    "def get_image_files(run_data):\n",
+    "    \"\"\"Get all image files from run data.\"\"\"\n",
+    "    image_extensions = {'.png', '.jpg', '.jpeg', '.gif', '.bmp', '.svg', '.webp'}\n",
+    "    image_files = []\n",
+    "    \n",
+    "    for f in run_data['files']:\n",
+    "        name_lower = f['name'].lower()\n",
+    "        if any(name_lower.endswith(ext) for ext in image_extensions):\n",
+    "            image_files.append(f)\n",
+    "    \n",
+    "    return image_files\n",
+    "\n",
+    "print(\"🖼️ Image Comparison\")\n",
+    "print(\"=\" * 80)\n",
+    "\n",
+    "# Get image files from both runs\n",
+    "run1_images = get_image_files(runs_data['poxmea6n'])\n",
+    "run2_images = get_image_files(runs_data['buqt4b6u'])\n",
+    "\n",
+    "print(f\"Run 1: {len(run1_images)} images found\")\n",
+    "for img in run1_images:\n",
+    "    size_str = f\"{img['size'] / 1024:.2f} KB\" if img['size'] else \"Unknown\"\n",
+    "    print(f\"  - {img['name']} ({size_str})\")\n",
+    "\n",
+    "print(f\"\\nRun 2: {len(run2_images)} images found\")\n",
+    "for img in run2_images:\n",
+    "    size_str = f\"{img['size'] / 1024:.2f} KB\" if img['size'] else \"Unknown\"\n",
+    "    print(f\"  - {img['name']} ({size_str})\")\n",
+    "\n",
+    "# Collect all unique image names for comparison\n",
+    "all_image_names = set()\n",
+    "all_image_names.update([img['name'] for img in run1_images])\n",
+    "all_image_names.update([img['name'] for img in run2_images])\n",
+    "\n",
+    "print(f\"\\n{'=' * 80}\")\n",
+    "print(\"Displaying Images Side by Side\")\n",
+    "print(\"=\" * 80)\n",
+    "\n",
+    "if not all_image_names:\n",
+    "    print(\"⚠️  No images found in either run.\")\n",
+    "else:\n",
+    "    # Display each image comparison\n",
+    "    for img_name in sorted(all_image_names):\n",
+    "        # Get image from Run 1\n",
+    "        run1_img_file = next((f for f in run1_images if f['name'] == img_name), None)\n",
+    "        run1_image = None\n",
+    "        if run1_img_file:\n",
+    "            print(f\"Downloading from Run 1: {img_name}\")\n",
+    "            run1_image = download_image(run1_img_file['url'])\n",
+    "        \n",
+    "        # Get image from Run 2\n",
+    "        run2_img_file = next((f for f in run2_images if f['name'] == img_name), None)\n",
+    "        run2_image = None\n",
+    "        if run2_img_file:\n",
+    "            print(f\"Downloading from Run 2: {img_name}\")\n",
+    "            run2_image = download_image(run2_img_file['url'])\n",
+    "        \n",
+    "        # Display side by side\n",
+    "        display_image_side_by_side(run1_image, run2_image, img_name)\n",
+    "        print()\n",
+    "\n",
+    "print(\"✓ Image comparison complete!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Summary and Quick Links\n",
     "\n",
     "print(\"=\" * 80)\n",
@@ -637,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "source": [
     "---\n",
@@ -658,6 +796,7 @@
     "| **Performance Metrics** | Bar chart comparison of summary metrics |\n",
     "| **Difference Analysis** | Calculates and visualizes percentage differences between runs |\n",
     "| **Files/Artifacts** | Compares log files and artifacts between runs |\n",
+    "| **Images** | Downloads and displays all images from both runs side by side for visual comparison |\n",
     "| **Summary** | Displays quick links and key statistics |\n",
     "\n",
     "**To compare different runs:**\n",
