Add side-by-side comparison tables

--- a/notebooks/run_comparison.ipynb
+++ b/notebooks/run_comparison.ipynb
@@ -244,6 +244,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create Side-by-Side Comparison Tables\n",
+    "\n",
+    "# 1. Metadata Comparison\n",
+    "meta_data = []\n",
+    "for run_id in RUN_IDS:\n",
+    "    meta_data.append(runs_data[run_id]['meta'])\n",
+    "\n",
+    "df_meta = pd.DataFrame(meta_data, index=['Run 1 (poxmea6n)', 'Run 2 (buqt4b6u)']).T\n",
+    "\n",
+    "# 2. Summary Metrics Comparison\n",
+    "df_summary = pd.DataFrame({\n",
+    "    'Run 1 (poxmea6n)': runs_data['poxmea6n']['summary'],\n",
+    "    'Run 2 (buqt4b6u)': runs_data['buqt4b6u']['summary']\n",
+    "})\n",
+    "\n",
+    "# 3. Configuration Comparison\n",
+    "df_config = pd.DataFrame({\n",
+    "    'Run 1 (poxmea6n)': runs_data['poxmea6n']['config'],\n",
+    "    'Run 2 (buqt4b6u)': runs_data['buqt4b6u']['config']\n",
+    "})\n",
+    "\n",
     "# Display side by side\n",
     "HTML(\"\"\"\n",
     "<div style=\"display: flex; gap: 20px; overflow-x: auto;\">\n",
