Not using hardcoded run ids

--- a/notebooks/run_comparison.ipynb
+++ b/notebooks/run_comparison.ipynb
@@ -200,17 +200,17 @@
     "\n",
     "# Create comparison DataFrames\n",
     "comparison_data = {\n",
-    "    'Metric': [],\n",
-    "    'Run 1 (poxmea6n)': [],\n",
-    "    'Run 2 (buqt4b6u)': []\n",
+    "    'Metric': [f\"Run {i+1} ({run_id})\" for i, run_id in enumerate(RUN_IDS)]\n",
     "}\n",
+    "for run_id in RUN_IDS:\n",
+    "    comparison_data[f\"Run {RUN_IDS.index(run_id)+1} ({run_id})\"] = []\n",
     "\n",
     "# Metadata comparison\n",
     "meta_fields = ['name', 'state', 'created_at', 'tags', 'group', 'job_type']\n",
     "for field in meta_fields:\n",
     "    comparison_data['Metric'].append(f\"meta.{field}\")\n",
-    "    comparison_data['Run 1 (poxmea6n)'].append(format_value(runs_data['poxmea6n']['meta'].get(field)))\n",
-    "    comparison_data['Run 2 (buqt4b6u)'].append(format_value(runs_data['buqt4b6u']['meta'].get(field)))\n",
+    "    for run_id in RUN_IDS:\n",
+    "        comparison_data[f\"Run {RUN_IDS.index(run_id)+1} ({run_id})\"].append(format_value(runs_data[run_id]['meta'].get(field)))\n",
     "\n",
     "# Summary metrics - find common keys\n",
     "summary_keys_1 = set(runs_data['poxmea6n']['summary'].keys())\n",
